--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "devStart": "nodemon server.js"
   },
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
-    "ejs": "^3.1.5",
+    "ejs": "^3.1.6",
     "express": "^4.15.2"
   },
   "devDependencies": {
